--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@electron/fuses": "^1.8.0",
     "@types/react": "^18.3.2",
     "@types/react-dom": "^18.3.0",
+    "@types/react-window": "^1.8.8",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
     "@vercel/webpack-asset-relocator-loader": "^1.7.3",
@@ -49,7 +50,8 @@
     "@emotion/styled": "^11.11.5",
     "@fontsource/roboto": "^5.0.13",
     "@mui/material": "^5.15.18",
-    "electron-squirrel-startup": "^1.0.1"
+    "electron-squirrel-startup": "^1.0.1",
+    "react-window": "^1.8.10"
   },
   "peerDependencies": {
     "react": "^17.0.0 || ^18.0.0",
