--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@electron-forge/plugin-fuses": "^7.4.0",
     "@electron-forge/plugin-webpack": "^7.4.0",
     "@electron/fuses": "^1.8.0",
+    "@types/electron-store": "^3.2.0",
     "@types/react": "^18.3.2",
     "@types/react-dom": "^18.3.0",
     "@types/react-window": "^1.8.8",
@@ -50,7 +51,8 @@
     "@emotion/styled": "^11.11.5",
     "@fontsource/roboto": "^5.0.13",
     "@mui/material": "^5.15.18",
-    "electron-squirrel-startup": "^1.0.1"
+    "electron-squirrel-startup": "^1.0.1",
+    "electron-store": "^9.0.0"
   },
   "peerDependencies": {
     "react": "^17.0.0 || ^18.0.0",
