--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@electron-forge/plugin-fuses": "^7.4.0",
     "@electron-forge/plugin-webpack": "^7.4.0",
     "@electron/fuses": "^1.8.0",
+    "@types/electron-localshortcut": "^3.1.3",
     "@types/electron-store": "^3.2.0",
     "@types/react": "^18.3.2",
     "@types/react-dom": "^18.3.0",
@@ -52,6 +53,7 @@
     "@fontsource/roboto": "^5.0.13",
     "@mui/icons-material": "^5.15.19",
     "@mui/material": "^5.15.18",
+    "electron-localshortcut": "^3.2.1",
     "electron-squirrel-startup": "^1.0.1",
     "electron-store": "^9.0.0"
   },
