--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,11 +12,12 @@ jobs:
       matrix:
         os:
           [
-            { name: 'windows', image: 'windows-latest' },
-            { name: 'macos', image: 'macos-latest' },
+            { name: "windows", image: "windows-latest" },
+            { name: "macos", image: "macos-latest" },
           ]
     runs-on: ${{ matrix.os.image }}
     steps:
+      - run: python3 -m pip install setuptools
       - name: Github checkout
         uses: actions/checkout@v4
       - name: Use Node.js
