--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,17 +7,24 @@ on:
       - main
 
 jobs:
-  build:
-    strategy:
-      matrix:
-        os:
-          [
-            { name: "windows", image: "windows-latest" },
-            { name: "macos", image: "macos-latest" },
-          ]
-    runs-on: ${{ matrix.os.image }}
+  build-macos:
+    runs-on: macos-latest
     steps:
-      - run: python3 -m pip install setuptools
+      - run: python3 -m pip install setuptools --break-system-packages
+      - name: Github checkout
+        uses: actions/checkout@v4
+      - name: Use Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+      - run: npm ci
+      - name: Publish app
+        env:
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
+        run: npm run publish
+  build-windows:
+    runs-on: windows-latest
+    steps:
       - name: Github checkout
         uses: actions/checkout@v4
       - name: Use Node.js
