update electron and electron-builder

--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
   },
   "devDependencies": {
     "@electron-forge/cli": "^7.4.0",
-    "@electron-forge/maker-squirrel": "^7.4.0",
     "@electron-forge/maker-dmg": "^7.4.0",
+    "@electron-forge/maker-squirrel": "^7.4.0",
     "@electron-forge/plugin-auto-unpack-natives": "^7.4.0",
     "@electron-forge/plugin-fuses": "^7.4.0",
     "@electron-forge/plugin-webpack": "^7.4.0",
@@ -29,7 +29,8 @@
     "@typescript-eslint/parser": "^5.62.0",
     "@vercel/webpack-asset-relocator-loader": "^1.7.3",
     "css-loader": "^6.11.0",
-    "electron": "30.0.6",
+    "electron": "^30.0.6",
+    "electron-builder": "^25.0.0-alpha.9",
     "electron-extension-installer": "^1.2.0",
     "eslint": "^8.57.0",
     "eslint-plugin-import": "^2.29.1",
