--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,8 +11,10 @@ jobs:
   build-macos:
     runs-on: macos-latest
     steps:
+      - name: fix permissions
+        run: chmod +x add-osx-cert.sh
       - name: Add MacOS certs
-        run: chmod +x add-osx-cert.sh && add-osx-cert.sh
+        run: add-osx-cert.sh
         env:
           CERTIFICATE_OSX_APPLICATION: ${{ secrets.CERTIFICATE_OSX_APPLICATION }}
           CERTIFICATE_PASSWORD: ${{ secrets.CERTIFICATE_PASSWORD }}
