--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@electron-forge/maker-zip": "^7.4.0",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@fontsource/roboto": "^5.0.13",
